Wed Oct  9 17:40:16 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_fstring): because of lazy sweep, str may be unmaked
	  already and swept at next time, so mark it for the time being.
	  [ruby-core:57756]

Wed Oct  9 13:53:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compar.c (cmp_eq): fail if recursion.  [ruby-core:57736] [Bug #9003]

	* thread.c (rb_exec_recursive_paired_outer): new function which is
	  combinnation of paired and outer variants.

Wed Oct  9 09:18:14 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/debug.h,
	  vm_backtrace.c (rb_profile_frame_full_label): add new C API
	  rb_profile_frame_full_label() which returns label with
	  qualified method name.
	  Note that in future version of Ruby label() may return
	  same return value of full_label().

	* ext/-test-/debug/profile_frames.c,
	  test/-ext-/debug/test_profile_frames.rb: fix a test for this change.


Wed Oct  9 00:55:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (load_lock): display backtrace to $stderr at circular
	  require.

	* vm_backtrace.c (rb_backtrace_print_to): new function to print
	  backtrace to the given output.

Tue Oct  8 21:03:35 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c, include/ruby/debug.h: add new APIs
	  * VALUE rb_profile_frame_method_name(VALUE frame)
	  * VALUE rb_profile_frame_qualified_method_name(VALUE frame)

	* iseq.c (rb_iseq_klass), internal.h: add new internal function
	  rb_iseq_method_name().

	* ext/-test-/debug/profile_frames.c (profile_frames),
	  test/-ext-/debug/test_profile_frames.rb: add a test.

Tue Oct  8 16:11:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_uniq): use rb_hash_values(), as well as the case no
	  block is given.

	* internal.h: define rb_hash_values() as internal API.

Tue Oct  8 13:53:21 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_uniq): use rb_hash_keys().

	* internal.h: define rb_hash_keys() as internal API.
